--- a/index.html
+++ b/index.html
@@ -49,19 +49,19 @@
       </li>
     </ul>
     <div id="social-links">
-      <a href="https://github.com/JessicaAlvesSSA" target="_blank">
+      <a href="https://github.com/maykbrito" target="_blank">
         <ion-icon name="logo-github"></ion-icon>
       </a>
 
-      <a href="https://www.instagram.com/jessicaalvesssa/" target="_blank">
-        <ion-icon name="logo-instagram"></ion-icon>
+      <a href="https://twitter.com/maykbrito" target="_blank">
+        <ion-icon name="logo-twitter"></ion-icon>
       </a>
 
       <a href="https://www.youtube.com/@rocketseat" target="_blank">
         <ion-icon name="logo-youtube"></ion-icon>
       </a>
 
-      <a href="https://www.linkedin.com/in/jessica-alves-071886164/" target="_blank">
+      <a href="https://www.linkedin.com/in/maykbrito" target="_blank">
         <ion-icon name="logo-linkedin"></ion-icon>
       </a>
 
